k8s/Yolo5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo5
  template:
    metadata:
      labels:
        app: yolo5
    spec:
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: polybot-certs
          secret:
            secretName: polybot-tls
        - name: polybot-ca
          secret:
            secretName: polybot-ca
      containers:
        - name: yolo5
          image: guymeltzer/yolo5:1.0.89
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: polybot-certs
              mountPath: "/app/certs"
              readOnly: true
            - name: polybot-ca
              mountPath: "/app/ca"
              readOnly: true
