k8s/Yolo5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yolo5-ingress
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-0ed67db09e8253867,subnet-0e3a0dc40687f7000
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: guy-yolo5-lg.devops-int-college.com
      http:
        paths:
          - backend:
              service:
                name: yolo5-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - guy-yolo5-lg.devops-int-college.com
      secretName: polybot-tls
